# weather_turtle

./: .gitignore  README.md  main.py  pyproject.toml  run.ps1  run.sh
devscripts/: generate_requirements.py  install_requirements.py  make_executable.py
src/: main.py
