[tool.poetry]
name = "python_poetry_template"
version = "0.1.0"
description = ""
authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
rich = "^13.3.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
